--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Guess the color</title>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel="stylesheet" href="css/style.css">  
@@ -12,7 +14,7 @@
     <div class=''>
       <h1> Guess&nbsp;the&nbsp;color&nbsp;-<wbr> Угадай&nbsp;цвет</h1>
       <button class='btn btn-primary' onclick='fnBegin();'> Begin</button>
-      <button class='btn btn-primary'><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Help</button>
+      <button class='btn btn-primary' onclick='playSound(0, 30);'><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Help</button>
     </div>
   </header>
 
@@ -25,21 +27,25 @@
 
   <!-- YouWinModal <a data-toggle="modal" data-target="#loginModal">-->
   <div id="youWinModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title"> Ура! Победа! </h4>
-              </div>
-              <div class="modal-body winner"> 
-                <p> Цвет угадан за <span id='attemptsCountNode'></span> ! </p>
-              </div> 
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
+    <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title"> Ура! Победа! </h4>
           </div>
-        </div>
+          <div class="modal-body winner"> 
+            <p> Цвет угадан за <span id='attemptsCountNode'></span> ! </p>
+          </div> 
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+      </div>
     </div>
+  </div>
+
+  <!-- <audio src="sound/hello.mp3" autoplay></audio>-->  
+  <iframe src=""  allowfullscreen></iframe>
+  
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
