--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class=''>
       <h1> Guess&nbsp;the&nbsp;color&nbsp;-<wbr> Угадай&nbsp;цвет</h1>
       <button class='btn btn-primary' onclick='fnBegin();'> Begin</button>
-      <button class='btn btn-primary' onclick='playSound(0, 30);'><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Help</button>
+      <button class='btn btn-primary' onclick='playSound("hello");'><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Help</button>
     </div>
   </header>
 
@@ -31,10 +31,11 @@
       <div class="modal-content">
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title"> Ура! Победа! </h4>
+              <h4 class="modal-title"> Ура! Победа! Ты молодец! </h4>
           </div>
           <div class="modal-body winner"> 
             <p> Цвет угадан за <span id='attemptsCountNode'></span> ! </p>
+            <iframe src=""  allowfullscreen> </iframe>
           </div> 
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -43,9 +44,7 @@
     </div>
   </div>
 
-  <!-- <audio src="sound/hello.mp3" autoplay></audio>-->  
-  <iframe src=""  allowfullscreen></iframe>
-  
+  <audio src="sound/hello.mp3" autoplay></audio>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
