Add helping sounds

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class=''>
       <h1> Guess&nbsp;the&nbsp;color&nbsp;-<wbr> Угадай&nbsp;цвет</h1>
       <button class='btn btn-primary' onclick='fnBegin();'> Begin</button>
-      <button class='btn btn-primary' onclick='playSound("hello");'><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Help</button>
+      <button class='btn btn-primary' onclick='playSound("help");'><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Help</button>
     </div>
   </header>
 
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <audio src="sound/hello.mp3" autoplay></audio>
+  <audio src="" autoplay></audio>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
